# public

./: LICENSE  README.md
conferences/corehard-2018/code/: CMakeLists.txt  main.cpp
conferences/corehard-2019/: microprocessor trands.xlsx
conferences/cpp-meetup-march-2019/: results.csv  results.xlsx
conferences/siberia-2019/: results.xlsx
conferences/siberia-2019/code/: main.cpp
courses/computer_architecture/MIPT/2013/: Lecture_10__15_Feb_Updated__Basics_of_Pipelining__Eng_text__No_audio.pptx  Lecture_10__15_Feb__Basics_of_Pipelining__Eng_text__No_audio.pptx  Lecture_11__22_Feb__Pipelining__Control_Hazards__Eng_text__No_audio.pptx  Lecture_12__01_Mar__Caches_and_Memory_Hierarchy__Eng_text__No_audio.pptx  Lecture_13__22_Mar__Advanced_Pipelining__Eng_text__No_audio.pptx  Lecture_14__5_April__ROB_based_OOO_Execution__Eng_text__No_audio.pptx  Lecture_8__30_Nov__Basics_of_MIPS_ISA__Eng_text__No_audio.pptx  Lecture_9__7_Dec__Single_Cycle_Implementation__Eng_text__No_audio.pptx
courses/computer_architecture/MIPT/2014/: L12_Miss_Rate_Diagram.xlsx  Lecture_10__13_Dec__Advanced_Pipelining__Eng_text__No_audio.pptx  Lecture_11__14_Feb__Memory_Hierarchy_Part_I__Eng_text__No_audio.pptx  Lecture_12__28_Feb__Memory_Hierarchy_Part_II__Eng_text__No_audio.pptx  Lecture_13__14_March__Out_Of_Order_Execution_Part_I__Eng_text__No_audio.pptx  Lecture_14__04_Apr__Out_Of_Order_Execution_Part_II__Eng_text__No_audio.pptx  (+12 more)
courses/talks_at_yandex/2014/: cpu course for yandex -- day 1 -- 2014.pptx  cpu course for yandex -- day 2 -- 2014.pptx
(+29 files in other folders)
